# scaling-laws-demo

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_single_cell.ipynb  01_scaling_laws.ipynb  01_tune_one_cell.ipynb  02_double_descent.ipynb  02_hp_transfer_law.ipynb  03_scaling_analysis.ipynb  04_double_descent.ipynb
results/: double_descent_epochs.csv  double_descent_grid.csv  double_descent_samples.csv  double_descent_width.csv  hp_study_cosine.json  lr_ablation.csv  sweep_cosine.csv  sweep_cosine_L1.csv  sweep_cosine_L4.csv  sweep_cosine_L6.csv  sweep_meta.json  teacher.pt
scaling_laws/: __init__.py  approaches.py  data.py  flops.py  hp.py  live.py  models.py  plotting.py  sweep.py
scripts/: run_depth_compare.py  run_double_descent.py  run_hp_study.py  run_isoflop.py  run_lr_ablation.py  run_sweep.py
